добавил метод продления ключа и обновил дто
